# Tamazight-ASR

./: .env  dvc.yaml  pyproject.toml
.dvc/: config
tamazight asr/prototyping/: transcripts_extraction.ipynb
tamazight asr/src/data_preparation/: subtitle_voice_extraction.py
tamazight_asr/data/: .gitignore
tamazight_asr/data/srt/: output_video.srt
tamazight_asr/prototyping/: gcloud.ipynb  google-cloud-vision-key.json  subtitle_coords.txt  transcripts_extraction.ipynb
tamazight_asr/prototyping/dataset/: dataset.csv
tamazight_asr/src/data_preparation/: text_audio_dataset.py
