[tool.poetry]
name = "tamazight asr"
version = "0.1.0"
description = ""
authors = ["soufiane <soufiane@alpha10x.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
opencv-python = "^4.10.0.84"
pillow = ">=9.2.0,<11.0.0"
pytube = "^15.0.0"
yt-dlp = "^2024.11.18"
onnxruntime = "^1.20.1"
numpy = "<2.1.0"
pytesseract = "^0.3.13"
easyocr = "^1.7.2"
arabicocr = "^1.1.6"
google-cloud-vision = "^3.8.1"
pysrt = "^1.1.2"
moviepy = "^2.0.0"
pydub = "^0.25.1"
pandas = "^2.2.3"
pygame = "^2.6.1"
websocket = "^0.2.1"
dvc = "^3.56.0"
dvc-azure = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
